// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_load_get handles user config that has compressed data like string just fine 1`] = `
Object {
  "comment0": "",
  "func0": "STRING",
  "indexes": "0",
  "input0": "compressed=foo&version=1.0",
  "option0": "Replace",
  "skeyValue0": "test",
}
`;

exports[`_load_get handles user config that has parts of compressed data fine 1`] = `
Object {
  "comment0": "",
  "comment1": "",
  "func0": "STRING",
  "func1": "STRING",
  "indexes": "0,1",
  "input0": "compressed=foo",
  "input1": "version=1.0",
  "option0": "Replace",
  "option1": "Replace",
  "skeyValue0": "test",
  "skeyValue1": "test2",
}
`;

exports[`_load_get takes a basic query and returns expected data 1`] = `
Object {
  "comment0": "",
  "func0": "KEY",
  "input0": "b",
  "length": "1",
  "option0": "Replace",
  "skeyValue0": "a",
}
`;

exports[`_load_get takes compressed data handles first order 1`] = `
Object {
  "Code17": "
Send, ^c
Sleep 50
Run, http://www.google.com/search?q=%clipboard%
Return",
  "Program12": "cmd",
  "Program13": "notepad++.exe",
  "Program14": "chrome.exe",
  "Program15": "WINWORD",
  "Program16": "excel.exe",
  "Program18": "devenv.exe",
  "Program19": "C:\\\\Program Files (x86)\\\\PuTTY\\\\putty.exe",
  "Program9": "http://dictionary.reference.com/",
  "Window12": "ahk_exe cmd.exe",
  "Window13": "- Notepad++",
  "Window14": "- Google Chrome",
  "Window15": "- Word",
  "Window16": "- Excel",
  "Window18": "Visual Studio",
  "Window19": "ahk_exe putty.exe",
  "Window9": "dictionary.com",
  "comment0": " ;config = open this page",
  "comment1": "\\";implies\\" is replaced with an arrow",
  "comment10": "SHIFT + Wheel = fast scroll",
  "comment11": "",
  "comment12": "CTRL + Alt + c = command prompt",
  "comment13": "CTRL + Alt + n = notepad++",
  "comment14": "CTRL + Alt + i = chrome (internet)",
  "comment15": "CTRL + Alt + w = Word",
  "comment16": "CTRL + Alt + e = Excel",
  "comment17": "CTRL + Shift + g = search Google for the highlighted text",
  "comment18": "CTRL + Alt + v = Visual Studio",
  "comment19": "CTRL + Alt + p = putty",
  "comment2": "\\";degree\\" is replaced with an degree symbol",
  "comment3": "\\";check\\" is replaced with a check mark",
  "comment4": "\\";frown\\" is replaced with a unicode frown",
  "comment5": "\\";smile\\" is replaced with a unicode smile",
  "comment6": "\\";theta\\" is replaced with θ",
  "comment7": "\\";pi\\" is replaced with π",
  "comment8": "\\";cents\\" is replaced with a cents symbol",
  "comment9": "\\";dict\\" = open dictionay.com",
  "exampleconfig": "1",
  "func0": "STRING",
  "func1": "STRING",
  "func10": "KEY",
  "func11": "KEY",
  "func12": "KEY",
  "func13": "KEY",
  "func14": "KEY",
  "func15": "KEY",
  "func16": "KEY",
  "func17": "KEY",
  "func18": "KEY",
  "func19": "KEY",
  "func2": "STRING",
  "func3": "STRING",
  "func4": "STRING",
  "func5": "STRING",
  "func6": "STRING",
  "func7": "STRING",
  "func8": "STRING",
  "func9": "STRING",
  "input1": "0x2192",
  "input10": "{WheelDown 5}",
  "input11": "{WheelUp 5}",
  "input2": "0x00b0",
  "input3": "0x2713",
  "input4": "0x2639",
  "input5": "0x263A",
  "input6": "0x03B8",
  "input7": "0x03C0",
  "input8": "0x00A2",
  "length": "20",
  "option0": "OpenConfig",
  "option1": "SendUnicodeChar",
  "option10": "Send",
  "option11": "Send",
  "option12": "ActivateOrOpen",
  "option13": "ActivateOrOpen",
  "option14": "ActivateOrOpen",
  "option15": "ActivateOrOpen",
  "option16": "ActivateOrOpen",
  "option17": "Custom",
  "option18": "ActivateOrOpen",
  "option19": "ActivateOrOpen",
  "option2": "SendUnicodeChar",
  "option3": "SendUnicodeChar",
  "option4": "SendUnicodeChar",
  "option5": "SendUnicodeChar",
  "option6": "SendUnicodeChar",
  "option7": "SendUnicodeChar",
  "option8": "SendUnicodeChar",
  "option9": "ActivateOrOpenChrome",
  "skey12[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey13[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey14[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey15[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey16[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey17[]": Array [
    "CTRL",
    "SHIFT",
  ],
  "skey18[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey19[]": Array [
    "CTRL",
    "ALT",
  ],
  "skeyValue0": "\`;config",
  "skeyValue1": ";implies",
  "skeyValue10": "$+WheelDown",
  "skeyValue11": "$+WheelUp",
  "skeyValue12": "c",
  "skeyValue13": "n",
  "skeyValue14": "i",
  "skeyValue15": "w",
  "skeyValue16": "e",
  "skeyValue17": "g",
  "skeyValue18": "v",
  "skeyValue19": "p",
  "skeyValue2": ";degree",
  "skeyValue3": ";check",
  "skeyValue4": ";frown",
  "skeyValue5": ";smile",
  "skeyValue6": ";theta",
  "skeyValue7": ";pi",
  "skeyValue8": ";cents",
  "skeyValue9": ";dict",
}
`;

exports[`_load_get takes compressed data handles other order 1`] = `
Object {
  "Code17": "
Send, ^c
Sleep 50
Run, http://www.google.com/search?q=%clipboard%
Return",
  "Program12": "cmd",
  "Program13": "notepad++.exe",
  "Program14": "chrome.exe",
  "Program15": "WINWORD",
  "Program16": "excel.exe",
  "Program18": "devenv.exe",
  "Program19": "C:\\\\Program Files (x86)\\\\PuTTY\\\\putty.exe",
  "Program9": "http://dictionary.reference.com/",
  "Window12": "ahk_exe cmd.exe",
  "Window13": "- Notepad++",
  "Window14": "- Google Chrome",
  "Window15": "- Word",
  "Window16": "- Excel",
  "Window18": "Visual Studio",
  "Window19": "ahk_exe putty.exe",
  "Window9": "dictionary.com",
  "comment0": " ;config = open this page",
  "comment1": "\\";implies\\" is replaced with an arrow",
  "comment10": "SHIFT + Wheel = fast scroll",
  "comment11": "",
  "comment12": "CTRL + Alt + c = command prompt",
  "comment13": "CTRL + Alt + n = notepad++",
  "comment14": "CTRL + Alt + i = chrome (internet)",
  "comment15": "CTRL + Alt + w = Word",
  "comment16": "CTRL + Alt + e = Excel",
  "comment17": "CTRL + Shift + g = search Google for the highlighted text",
  "comment18": "CTRL + Alt + v = Visual Studio",
  "comment19": "CTRL + Alt + p = putty",
  "comment2": "\\";degree\\" is replaced with an degree symbol",
  "comment3": "\\";check\\" is replaced with a check mark",
  "comment4": "\\";frown\\" is replaced with a unicode frown",
  "comment5": "\\";smile\\" is replaced with a unicode smile",
  "comment6": "\\";theta\\" is replaced with θ",
  "comment7": "\\";pi\\" is replaced with π",
  "comment8": "\\";cents\\" is replaced with a cents symbol",
  "comment9": "\\";dict\\" = open dictionay.com",
  "exampleconfig": "1",
  "func0": "STRING",
  "func1": "STRING",
  "func10": "KEY",
  "func11": "KEY",
  "func12": "KEY",
  "func13": "KEY",
  "func14": "KEY",
  "func15": "KEY",
  "func16": "KEY",
  "func17": "KEY",
  "func18": "KEY",
  "func19": "KEY",
  "func2": "STRING",
  "func3": "STRING",
  "func4": "STRING",
  "func5": "STRING",
  "func6": "STRING",
  "func7": "STRING",
  "func8": "STRING",
  "func9": "STRING",
  "input1": "0x2192",
  "input10": "{WheelDown 5}",
  "input11": "{WheelUp 5}",
  "input2": "0x00b0",
  "input3": "0x2713",
  "input4": "0x2639",
  "input5": "0x263A",
  "input6": "0x03B8",
  "input7": "0x03C0",
  "input8": "0x00A2",
  "length": "20",
  "option0": "OpenConfig",
  "option1": "SendUnicodeChar",
  "option10": "Send",
  "option11": "Send",
  "option12": "ActivateOrOpen",
  "option13": "ActivateOrOpen",
  "option14": "ActivateOrOpen",
  "option15": "ActivateOrOpen",
  "option16": "ActivateOrOpen",
  "option17": "Custom",
  "option18": "ActivateOrOpen",
  "option19": "ActivateOrOpen",
  "option2": "SendUnicodeChar",
  "option3": "SendUnicodeChar",
  "option4": "SendUnicodeChar",
  "option5": "SendUnicodeChar",
  "option6": "SendUnicodeChar",
  "option7": "SendUnicodeChar",
  "option8": "SendUnicodeChar",
  "option9": "ActivateOrOpenChrome",
  "skey12[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey13[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey14[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey15[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey16[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey17[]": Array [
    "CTRL",
    "SHIFT",
  ],
  "skey18[]": Array [
    "CTRL",
    "ALT",
  ],
  "skey19[]": Array [
    "CTRL",
    "ALT",
  ],
  "skeyValue0": "\`;config",
  "skeyValue1": ";implies",
  "skeyValue10": "$+WheelDown",
  "skeyValue11": "$+WheelUp",
  "skeyValue12": "c",
  "skeyValue13": "n",
  "skeyValue14": "i",
  "skeyValue15": "w",
  "skeyValue16": "e",
  "skeyValue17": "g",
  "skeyValue18": "v",
  "skeyValue19": "p",
  "skeyValue2": ";degree",
  "skeyValue3": ";check",
  "skeyValue4": ";frown",
  "skeyValue5": ";smile",
  "skeyValue6": ";theta",
  "skeyValue7": ";pi",
  "skeyValue8": ";cents",
  "skeyValue9": ";dict",
}
`;

exports[`_load_get takes data in regardless of values 1`] = `
Object {
  "comment5": "",
  "func5": "KEY",
  "input5": "b",
  "length": "1",
  "option5": "Replace",
  "skeyValue5": "a",
}
`;

exports[`_load_get takes no issue with an indexes query 1`] = `
Object {
  "comment0": "",
  "func0": "KEY",
  "indexes": "1",
  "input0": "b",
  "option0": "Send",
  "skeyValue0": "a",
}
`;

exports[`_parse_get Allowes missing params when optional allows for comment to not be provided 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "a",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get Handles indexes correctly get desired indexes in order 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "a",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "b",
  },
  "1": Object {
    "func": "STRING",
    "input": "this is a test",
    "option": "Replace",
    "skeyValue": "\`;test",
  },
}
`;

exports[`_parse_get Handles indexes correctly handles basic send command 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "a",
    "modifiers[]": Array [
      "CTRL",
    ],
    "option": "Send",
    "skeyValue": "Space",
  },
}
`;

exports[`_parse_get Handles old query urls as well parses example URL correctly 1`] = `
Object {
  "0": Object {
    "func": "STRING",
    "input": "0x2192",
    "option": "SendUnicodeChar",
    "skeyValue": ";implies",
  },
  "1": Object {
    "func": "STRING",
    "input": "0x00b0",
    "option": "SendUnicodeChar",
    "skeyValue": ";degree",
  },
  "10": Object {
    "Program": "cmd",
    "Window": "ahk_exe cmd.exe",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "c",
  },
  "11": Object {
    "Program": "notepad  .exe",
    "Window": "- Notepad  ",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "n",
  },
  "12": Object {
    "Program": "chrome.exe",
    "Window": "- Google Chrome",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "i",
  },
  "13": Object {
    "Code": "
	Send, ^c
	Sleep 50
	Run, http://www.google.com/search?q=%clipboard%
	Return",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Custom",
    "skeyValue": "g",
  },
  "14": Object {
    "Program": "%temp%\\\\LabVIEW\\\\LabVIEW.exe",
    "Window": "ahk_exe LabVIEW NXG.exe",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "l",
  },
  "15": Object {
    "Code": "
    Send !{Space}
    Send n
    return
",
    "func": "KEY",
    "modifiers[]": Array [
      "WIN",
    ],
    "option": "Custom",
    "skeyValue": "m",
  },
  "2": Object {
    "func": "STRING",
    "input": "0x2713",
    "option": "SendUnicodeChar",
    "skeyValue": ";check",
  },
  "3": Object {
    "func": "STRING",
    "input": "0x2639",
    "option": "SendUnicodeChar",
    "skeyValue": ";frown",
  },
  "4": Object {
    "func": "STRING",
    "input": "0x263A",
    "option": "SendUnicodeChar",
    "skeyValue": ";smile",
  },
  "5": Object {
    "func": "STRING",
    "input": "0x03B8",
    "option": "SendUnicodeChar",
    "skeyValue": ";theta",
  },
  "6": Object {
    "func": "STRING",
    "input": "0x03C0",
    "option": "SendUnicodeChar",
    "skeyValue": ";pi",
  },
  "7": Object {
    "func": "STRING",
    "input": "0x00A2",
    "option": "SendUnicodeChar",
    "skeyValue": ";cents",
  },
  "8": Object {
    "Program": "http://dictionary.reference.com/",
    "Window": "dictionary.com",
    "func": "STRING",
    "option": "ActivateOrOpenChrome",
    "skeyValue": ";dict",
  },
  "9": Object {
    "Program": "C:\\\\Program Files (x86)\\\\PuTTY\\\\putty.exe",
    "Window": "ahk_exe putty.exe",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "p",
  },
}
`;

exports[`_parse_get Handles old query urls as well parses example URL correctly 2`] = `
Object {
  "0": Object {
    "func": "STRING",
    "input": "0x00b0",
    "option": "SendUnicodeChar",
    "skeyValue": ";degree",
  },
  "1": Object {
    "func": "STRING",
    "input": "0x2713",
    "option": "SendUnicodeChar",
    "skeyValue": ";check",
  },
  "10": Object {
    "Program": "notepad  .exe",
    "Window": "- Notepad  ",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "n",
  },
  "11": Object {
    "Program": "chrome.exe",
    "Window": "- Google Chrome",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "i",
  },
  "12": Object {
    "Code": "
	Send, ^c
	Sleep 50
	Run, http://www.google.com/search?q=%clipboard%
	Return",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Custom",
    "skeyValue": "g",
  },
  "2": Object {
    "func": "STRING",
    "input": "0x2639",
    "option": "SendUnicodeChar",
    "skeyValue": ";frown",
  },
  "3": Object {
    "func": "STRING",
    "input": "0x263A",
    "option": "SendUnicodeChar",
    "skeyValue": ";smile",
  },
  "4": Object {
    "func": "STRING",
    "input": "0x03B8",
    "option": "SendUnicodeChar",
    "skeyValue": ";theta",
  },
  "5": Object {
    "func": "STRING",
    "input": "0x03C0",
    "option": "SendUnicodeChar",
    "skeyValue": ";pi",
  },
  "6": Object {
    "func": "STRING",
    "input": "0x00A2",
    "option": "SendUnicodeChar",
    "skeyValue": ";cents",
  },
  "7": Object {
    "Program": "http://dictionary.reference.com/",
    "Window": "dictionary.com",
    "func": "STRING",
    "option": "ActivateOrOpenChrome",
    "skeyValue": ";dict",
  },
  "8": Object {
    "Program": "C:\\\\Program Files (x86)\\\\PuTTY\\\\putty.exe",
    "Window": "ahk_exe putty.exe",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "p",
  },
  "9": Object {
    "Program": "cmd",
    "Window": "ahk_exe cmd.exe",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "c",
  },
}
`;

exports[`_parse_get Handles old query urls as well parses example URL correctly 3`] = `
Object {
  "0": Object {
    "Code": "
	next = GetNextProgram();
	get_exe_name = GetExe(next);
	MsgBox, Next Program: %next%\`nExe: %get_exe_name%
	ActivateOrOpen(next, get_exe_name);
	return;

GetNextProgram()
{
	if WinActive(\\"ahk_class MozillaWindowClass\\")
	{
		return \\"ahk_exe excel.exe\\";
	}
	if WinActive(\\"ahk_exe excel.exe\\")
	{
		return \\"ahk_exe outlook.exe\\";
	}
	if WinActive(\\"ahk_exe sage\\")
	{
		return \\"ahk_class MozillaWindowClass\\");
	}
}
GetExe(program)
{
	if (program = \\"ahk_exe excel.exe\\")
	{
		return \\"excel.exe\\";
	}
	if program = \\"ahk_exe outlook.exe\\")
	{
		return \\"outlook.exe\\";
	}
	if program = \\"ahk_class MozillaWindowClass\\")
	{
		return \\"Mozilla.exe\\");
	}
}",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "Custom",
    "skeyValue": "F3",
  },
}
`;

exports[`_parse_get Handles old query urls as well parses example URL correctly 4`] = `
Object {
  "0": Object {
    "Code": "
  if WinExist(\\"Robot Main.vi\\")
  {
    WinActivate  ; Uses the last found window. 
  }
  return",
    "comment": "CTRL   ALT   M = main.vi (if open)",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Custom",
    "skeyValue": "m",
  },
  "1": Object {
    "Program": "C:\\\\Program Files (x86)\\\\FRC Driver Station\\\\Driverstation.exe",
    "Window": "ahk_exe DriverStation.exe",
    "comment": "CTRL   ALT   D = Driver Station",
    "func": "KEY",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "ActivateOrOpen",
    "skeyValue": "d",
  },
}
`;

exports[`_parse_get Handles old query urls as well parses example URL correctly 5`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "r",
    "modifiers[]": Array [],
    "option": "Send",
    "skeyValue": "Space",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: handles missing comment \`=\` 1`] = `
Object {
  "0": Object {
    "func": "STRING",
    "input": "1",
    "option": "Send",
    "skeyValue": "1",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: packs values down to lowest index 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: packs values down to lowest index 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a Custom correctly 1`] = `
Object {
  "0": Object {
    "Code": "send, a",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "Custom",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a Custom correctly 2`] = `
Object {
  "0": Object {
    "Code": "send, a",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "Custom",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a Send Unicode Char correctly 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "0x00A2",
    "modifiers[]": Array [],
    "option": "SendUnicodeChar",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a Send Unicode Char correctly 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "0x00A2",
    "modifiers[]": Array [],
    "option": "SendUnicodeChar",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a basic replace correctly 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [],
    "option": "Replace",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a basic replace correctly 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [],
    "option": "Replace",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a basic send value correctly 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a basic send value correctly 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a group modifier keys correctly (ctrl, alt) 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a group modifier keys correctly (ctrl, alt) 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a group modifier keys correctly (ctrl, alt, shift, win) 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "CTRL",
      "SHIFT",
      "ALT",
      "WIN",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a group modifier keys correctly (ctrl, alt, shift, win) 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "CTRL",
      "SHIFT",
      "ALT",
      "WIN",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (alt) 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (alt) 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (ctrl) 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "CTRL",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (ctrl) 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "CTRL",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (shift) 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "SHIFT",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (shift) 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "SHIFT",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (win) 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "WIN",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses a modifier keys correctly (win) 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "b",
    "modifiers[]": Array [
      "WIN",
    ],
    "option": "Send",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses an Activate Or Open correctly 1`] = `
Object {
  "0": Object {
    "Program": "chrome.exe",
    "Window": "ahk_exe chrome.exe",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "ActivateOrOpen",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses an Activate Or Open correctly 2`] = `
Object {
  "0": Object {
    "Program": "chrome.exe",
    "Window": "ahk_exe chrome.exe",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "ActivateOrOpen",
    "skeyValue": "a",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses an ActivateOrOpenChrome correctly 1`] = `
Object {
  "0": Object {
    "Program": "pandora.com",
    "Window": "pandora",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "ActivateOrOpenChrome",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses an ActivateOrOpenChrome correctly 2`] = `
Object {
  "0": Object {
    "Program": "pandora.com",
    "Window": "pandora",
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "ActivateOrOpenChrome",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses an OpenConfig correctly 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "OpenConfig",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: parses an OpenConfig correctly 2`] = `
Object {
  "0": Object {
    "func": "KEY",
    "modifiers[]": Array [],
    "option": "OpenConfig",
    "skeyValue": "b",
  },
}
`;

exports[`_parse_get takes a basic config and returns expected:: return an error for a missing index 1`] = `
Object {
  "ERROR": "Missing crucial values. Must have each of func1,option1,skeyValue1",
}
`;

exports[`_parse_get takes a basic config and returns expected:: returns an error for a length that is bigger than provided data 1`] = `
Object {
  "0": Object {
    "func": "KEY",
    "input": "foo",
    "modifiers[]": Array [
      "CTRL",
      "ALT",
    ],
    "option": "Send",
    "skeyValue": "d",
  },
  "ERROR": "Missing crucial values. Must have each of func1,option1,skeyValue1",
}
`;

exports[`_parse_get takes a basic config and returns expected:: returns an error if length is not provided 1`] = `
Object {
  "ERROR": "Missing crucial values. Must have each of func1,option1,skeyValue1",
}
`;
